# SwinUNet-VOG

./: .gitignore  CAMERA_DEBUGGING.md  CAMERA_SDK_GUIDE.md  CAPTURE_GUIDE.md  GEOMETRIC_NORMALIZATION.md  MP4_VS_AVI.md  OUTPUTS.md  PERFORMANCE.md  PREPROCESSING.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SDK_INTEGRATION_README.md  VIEW_VIDEO.md  capture.avi  capture.py  config.json  data.py  detect_camera.py  export_to_onnx.py  gui_visualizer.py  model.py  mpiigaze_summary.md  requirements.txt  run_capture.sh  sdk_wrapper.py  simple_test.py  test.py  test_capture_fix.py  test_display_text.py  test_fix.py  test_fix_verification.py  test_mediapipe_warnings.py  test_sdk_integration.py  test_sdk_mock.py  test_sdk_simulation.py  train.py  verify.py  view_video.py  visualize_results.py
.cursor/rules/architecture/: RULE.md
.cursor/rules/dev-rules/: RULE.md
.cursor/rules/glossary/: RULE.md
.cursor/rules/project-context/: RULE.md
checkpoints/: training_summary.json
js/: API_REFERENCE.md  demo.html  download_dependencies.py  server.py  swinunet-gaze-api.js
models/: swinunet.onnx
sdk/console_recorder/: .gitignore  CMakeLists.txt  README.md  SimpleRecorder.cpp  cap_card.h
sdk/include/: cap_card.h
sdk/simple_recorder/: README.md  SimpleRecorder.cpp  SimpleRecorder.h  SimpleRecorder.rc  SimpleRecorder.vcxproj  SimpleRecorderDlg.cpp  SimpleRecorderDlg.h  framework.h  pch.cpp  pch.h  resource.h  targetver.h
